--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,9 @@
+<input #search type="text" />
+<button type="submit" (click)="startSearch()">Search</button>
+
 <hello name="{{ name }}"></hello>
 <p>
 	{{pageSummary}}
 </p>
+
+<img src="{{pageThumbnail}}" width="auto" height="auto">
