--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,10 @@
 <input #search type="text" />
 <button type="submit" (click)="startSearch()">Search</button>
+<div *ngIf="searchData">
+	<hello name="{{ searchData.titles.display }}"></hello>
+	<p>
+		{{searchData.extract}}
+	</p>
 
-<hello name="{{ name }}"></hello>
-<p>
-	{{pageSummary}}
-</p>
-
-<img src="{{pageThumbnail}}" width="auto" height="auto">
+	<img src="{{searchData.thumbnail.source}}" width="auto" height="auto">
+</div>
